--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -56,33 +56,33 @@ redirect_from:
 </head>
 <body>
     <div class="container" id="container">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
 
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
 
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
-        <img class="pic" src="/images/wall/xieyuser2.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
+        <img class="pic" src="/images/wall/XiaoZHOU1.jpg">
     </div>
     <script>
         // 获取容器元素
